--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,5 +1,17 @@
-spring.application.name=
+spring.application.name=TeamBuying
+server.port=9090
 
 # Setup for Time zone
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+
+# Setup for MySQL Database
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/teambuying?serverTimezone=Asia/Taipei&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=root
+
+
+# Setup for JPA to init DB Table
+spring.jpa.hibernate.ddl-auto=update
+
