feat: manageController, NotifyController, TeambuyingCountroller

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/teambuying?serverTimezone=Asia/Taipei&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=412987
 # Setup for JPA Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
