--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -52,6 +52,11 @@
             <artifactId>mysql-connector-j</artifactId>
             <version>8.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+            <version>3.3.5</version>
+        </dependency>
     </dependencies>
 
     <build>
