fix: install yarn for frontend

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Build Frontend
         run: |
           cd front-end
+          npm install --global yarn
           yarn install
           yarn build
 
