--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=TeamBuying
+
 server.port=9090
 
 # Setup for Time zone
@@ -16,3 +17,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Setup for JPA to init DB Table
 spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.hibernate.ddl-auto=create
