fix: wrong command line to execute backend

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,5 +49,4 @@ jobs:
         run: |
           cd back-end
           ls
-          chmod +x mvnw
-          mvnw clean install
+          ./mvnw clean install
