--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/teambuying
 spring.datasource.username=root
-spring.datasource.password=412987
+spring.datasource.password=root
 
 # JPA/Hibernate Configuration
 spring.jpa.show-sql=true
