--- a/front-end/tsconfig.node.json
+++ b/front-end/tsconfig.node.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "composite": true,
     "module": "esnext",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "types": ["node", "@testing-library/jest-dom"]
   },
   "include": ["vite.config.ts"]
 }
