--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^7.0.1"
   },
   "devDependencies": {
+    "@types/node": "^22.10.1",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
