--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,41 @@
-version: "3.1"
+version: '3.8'
 
 services:
   mysql:
-    image: mysql:8
+    image: mysql:8.0
     environment:
-      MYSQL_DATABASE: teambuying
       MYSQL_ROOT_PASSWORD: root
-    volumes:
-      - ./mysql-data:/var/lib/mysql
+      MYSQL_DATABASE: teambuying
     ports:
-      - "3306:3306"
+      - "3307:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  backend:
+    build: 
+      context: ./back-end
+    ports:
+      - "9090:9090"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/teambuying
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root
+    depends_on:
+      mysql:
+        condition: service_healthy
+
+  frontend:
+    build:
+      context: ./front-end
+    ports:
+      - "5173:80"  # 修改為 5173 port
+    depends_on:
+      - backend
+
+volumes:
+  mysql_data:
