--- a/front-end/nginx.conf
+++ b/front-end/nginx.conf
@@ -5,13 +5,23 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Simple configuration
+    # Frontend routes
     location / {
         try_files $uri $uri/ /index.html =404;
         add_header Cache-Control "no-cache";
     }
 
-    # Basic error handling
+    # Proxy backend requests
+    location /api/ {
+        proxy_pass http://backend:9090/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # Error handling
     error_page 404 /index.html;
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
