fix front docker file

--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -1,36 +1,42 @@
 # Stage 1: Build stage
-FROM node:18-alpine as builder
+FROM node:18-alpine AS builder
 
 # Switch to a different Alpine mirror and add dependencies
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories && \
     apk update && \
     apk add --no-cache \
-    libc6-compat \
-    curl \
-    bash
+        libc6-compat \
+        curl \
+        bash
 
-# Configure better DNS resolution
-RUN printf "nameserver 8.8.8.8\nnameserver 8.8.4.4\nnameserver 1.1.1.1\nsearch .\noptions ndots:1 timeout:3 attempts:5 rotate\n" > /etc/resolv.conf
+# DNS configuration is now handled through Docker runtime flags
+# Use: docker run --dns 8.8.8.8 --dns 8.8.4.4 --dns 1.1.1.1 ...
 
 # Configure yarn with alternative registries
+# Using a dedicated cache folder improves build performance
 ENV YARN_CACHE_FOLDER=/root/.yarn-cache
-RUN yarn config set registry https://registry.yarnpkg.com \
-    && yarn config set network-timeout 600000 \
-    && yarn config set child-concurrency 1
 
-# Install dependencies first
+# Configure Yarn with better timeout and concurrency settings
+RUN yarn config set registry https://registry.yarnpkg.com && \
+    yarn config set network-timeout 600000 && \
+    yarn config set child-concurrency 1
+
+# Set working directory for the application
 WORKDIR /app
+
+# Copy package files first to leverage Docker cache
 COPY package*.json yarn.lock ./
 
-# Remove package-lock.json to avoid conflicts
+# Remove package-lock.json to prevent npm/yarn conflicts
 RUN rm -f package-lock.json
 
-# Install dependencies with lockfile generation allowed
-RUN yarn install --network-timeout 600000 --network-concurrency 1 \
-    || yarn install --network-timeout 600000 --network-concurrency 1 --registry https://registry.npmjs.org \
-    || yarn install --network-timeout 600000 --network-concurrency 1 --registry https://registry.npmmirror.com
+# Install dependencies with fallback registries
+# The multiple attempts help handle network issues
+RUN yarn install --network-timeout 600000 --network-concurrency 1 || \
+    yarn install --network-timeout 600000 --network-concurrency 1 --registry https://registry.npmjs.org || \
+    yarn install --network-timeout 600000 --network-concurrency 1 --registry https://registry.npmmirror.com
 
-# Copy and build application
+# Copy application code and build
 COPY . .
 RUN yarn build
 
@@ -43,6 +49,8 @@ COPY nginx.conf /etc/nginx/conf.d/default.conf
 # Copy built files from builder stage
 COPY --from=builder /app/dist /usr/share/nginx/html
 
+# Expose port 80 for HTTP traffic
 EXPOSE 80
 
+# Start nginx in foreground mode
 CMD ["nginx", "-g", "daemon off;"]
