--- a/front-end/nginx.conf
+++ b/front-end/nginx.conf
@@ -1,27 +1,26 @@
 server {
+    # 設定監聽的端口
     listen 80 default_server;
     listen [::]:80 default_server;
     
+    # 設定網站根目錄，這裡指向 Docker 中前端檔案的位置
     root /usr/share/nginx/html;
     index index.html;
 
-    # Frontend routes
+    # 處理前端路由
     location / {
+        # try_files 指令會依序尋找：
+        # 1. $uri：請求的實際 URI
+        # 2. $uri/：請求的 URI 作為目錄
+        # 3. /index.html：如果前面都找不到，返回 index.html
+        # 4. =404：如果 index.html 也不存在，返回 404 錯誤
         try_files $uri $uri/ /index.html =404;
+        
+        # 設定快取控制，避免瀏覽器快取造成更新問題
         add_header Cache-Control "no-cache";
     }
 
-    # Proxy backend requests
-    location /api/ {
-        proxy_pass http://backend:9090/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
-
-    # Error handling
+    # 錯誤頁面處理
     error_page 404 /index.html;
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
